# api/openapi.yaml
@@ -103,7 +103,7 @@ paths:
       responses:
         "200":
           description: Cliente deletado com sucesso!
-      x-swagger-router-controller: User
+      x-swagger-router-controller: cliente
   /cliente/{id}/plano:
     get:
       tags:
@@ -300,7 +300,7 @@ paths:
   /dominio/{id}/cliente:
     get:
       tags:
-      - plano
+      - dominio
       operationId: dominio_idclienteGET
       parameters:
       - name: id
