# controllers/Plano.js
@@ -13,15 +13,6 @@ module.exports.cliente_idplanoGET = function cliente_idplanoGET (req, res, next,
     });
 };
 
-module.exports.dominio_idclienteGET = function dominio_idclienteGET (req, res, next, id) {
-  Plano.dominio_idclienteGET(id)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
 
 module.exports.planoGET = function planoGET (req, res, next) {
   Plano.planoGET()
